@@ -1,3 +1,8 @@
+2001-02-15  Katsumi Yamaoka <yamaoka@jpl.org>
+
+	* lisp/message.el (message-cite-original-without-signature):
+	Extract from field for the simple citation line.
+
 2001-02-08  Katsumi Yamaoka <yamaoka@jpl.org>
 
 	* lisp/nnshimbun.el (nnshimbun-fml-get-headers): Fix unbalanced
